--- a/index.html
+++ b/index.html
@@ -6,35 +6,35 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Harry Hong Math Brand Identity</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>BRAND IDENTITY STANDARDS MANUAL</h1>
+								<p>Revision 1.0<br />
+								This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#philosophy">Philosophy</a></li>
+								<li><a href="#logo">Logo</a></li>
+								<li><a href="#color">Color</a></li>
+								<li><a href="#typography">Typography</a></li>
+								<!--<li><a href="#contact">Contact</a></li>-->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -42,28 +42,44 @@
 
 				<!-- Main -->
 					<div id="main">
+						<article id="philosophy">
+								<h2 class="major">Philosophy</h2>
+								<span class="image main"><img src="images/philosophy.png" alt="" /></span>
+								<p>Over the past couple of years, I've come to recognize that the online communication is the nature of the future and started realigning my fundamentals. As I'm assuming responsibility for the protection of this rapidly changing climate, I decided to build the identity from the scratch that'll not only reinforce my existing reputation but also reconstruct my new main target: more communication; this new brand identity is both inward- and outward-facing.</p>
+								<p>This Identity has two main goals to achieve:</p>
+								<p><strong>To give strong, consistent, and attentive feeling.</strong> It is vital to convey these feeling in order to give clients more reassurance and warmth.</p>
+								<p><strong>To focus more on the new means of communication: digital.</strong> I believe face-to-face or verbal communication should be the best but it may be unrealistic at times. The digital form of communication, especially emails, is now the most preferred method of communication, according to a SendGrind study called <i>The Future of Digital Communication</i>. Under this new Identity, I decided to discard all existing print-based formats such as PDFs, and design new digital formats that can be readily accessible in any devices, especially focusing more on viewing experience on mobile phones. </p>
+							</article>
+						
 
-						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+						<!-- Logo -->
+							<article id="logo">
+								<h2 class="major">Logo</h2>
+								<span class="image main"><img src="images/logo-precision-guidelines.png" alt="" /></span>
+								<p>The construction and composition of the logo is based on a combination of two geometric shapes: a circle and an equilateral triangle. An integral sign, symbolizing limitless, is inscribed in the lemniscate, symbolizing infinity, which is inscribed in a circle, symbolizing perfection, which is inscribed in an equilateral triangle, symbolizing unity and success. The triangle and its incircle are not parts of the final image but the construction and its white space yield an upward movement and stable formation.</p>
+								<p>An alternate logo with different color combination with reversed black and white is available to use on dark background only.</p>
+								<span class="image main"><img src="images/logo-minimum-clearance.png" alt="" /></span>
+								<p>The imaginary rectangle that circumscribes the logo is to be surrounded at minimum distance equal to the radius of one of the circles that compose the lemniscate. No visual elements are allowed within this range.</p>
+								<p>The minimum onscreen size of the logo is 150 pixels wide. The minimum print size is to be determined.</p>
 							</article>
 
-						<!-- Work -->
-							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+						<!-- Color -->
+							<article id="color">
+								<h2 class="major">Color</h2>
+								<span class="image main"><img src="images/color.png" alt="" /></span>
+								<p>The three primary colors are used: pure white, blue, and pure black. The shade of the blue is chosen to give viewers a sense of trustworthiness and stability. Its Pantone color is estimated. Some other saturated colors may be used only as secondary accent colors.</p>
+								<p>In most types of documents and forms, pure black text on pure white background is to be used. However, when "dark mode" is turned on the device, slightly darker white text (opacity of 87%, 60%, 38% for high emphasis, medium emphasis, disabled, respectively) on dark grey background (HEX #212121) is to be used if possible. Otherwise, all text/background color combinations are to be chosen according to <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html">the Web Content Accessibility Guidlines (WCAG 2.0)</a> level AA, requiring a 4.5:1 color contrast between text and background for normal text, and 3:1 for large text.</p>
+								<p>*PMS is a registered trademark of Pantone®, Inc. The color shown on this page is not intended to match the Pantone Color Standards. For accurate standards, refer to the current edition of the Pantone Color Specifier Guide.</p>
 							</article>
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+						<!-- Typography -->
+							<article id="typography">
+								<h2 class="major">Typography</h2>
+								<span class="image main"><img src="images/typography-sourcesanspro.png" alt="" /></span>
+								<p>The Identity primarily use the Source Sans Pro family in digital publications whenever possible. This is prefered over the Open Sans family due to: a) its clearer distinction between the uppercase "I" and the lowercase "L", b) warmer and more imperfect (therefore more natural) feeling, and c) relatively easier to read in smaller sizes.</p>
+								<span class="image main"><img src="images/typography-opensans.png" alt="" /></span>
+								<p>If the Source Sans Pro is not available, the Open Sans family may be used. This family may feel more aesthetically pleasing for its simpler, colder, and emotionless look, such as the straight tail of the uppercase "Q" and decending uppercase "J" below the baseline.</p>
+								<p>Where web fonts are not available such as emails, Arial, the most widely accepted typeface family, may substitute. The typeface families for printed publications are to be determined. Other details of typography other than the typeface such as sizes, kernings, leadings, line spacings, etc, are to be determined.</p>
 							</article>
 
 						<!-- Contact -->
@@ -343,7 +359,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">Web template Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
