--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 						</div>
 						<div class="content">
 							<div class="inner">
+								<h2>HARRY HONG INSTRUCTOR \MATHEMATICS</h2>
 								<h1>BRAND IDENTITY STANDARDS MANUAL</h1>
-								<p>Revision 1.0<br />
-								This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
+								<h3>Revision 1.0</h3>
+								<p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
 							</div>
 						</div>
 						<nav>
@@ -34,8 +35,7 @@
 								<li><a href="#logo">Logo</a></li>
 								<li><a href="#color">Color</a></li>
 								<li><a href="#typography">Typography</a></li>
-								<!--<li><a href="#contact">Contact</a></li>-->
-								<!--<li><a href="#elements">Elements</a></li>-->
+								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -45,10 +45,10 @@
 						<article id="philosophy">
 								<h2 class="major">Philosophy</h2>
 								<span class="image main"><img src="images/philosophy.png" alt="" /></span>
-								<p>Over the past couple of years, I've come to recognize that the online communication is the nature of the future and started realigning my fundamentals. As I'm assuming responsibility for the protection of this rapidly changing climate, I decided to build the identity from the scratch that'll not only reinforce my existing reputation but also reconstruct my new main target: more communication; this new brand identity is both inward- and outward-facing.</p>
-								<p>This Identity has two main goals to achieve:</p>
+								<p>Over the past couple of years, I've come to recognize that the online communication is the nature of the future and started realigning my fundamentals. As I'm assuming responsibility for the protection from this rapidly changing climate, I decided to build the identity from the scratch that'll not only reinforce my existing reputation but also reconstruct my new main target: more communication; this new Identity is both inward- and outward-facing.</p>
+								<p>The new Standards have two main goals to achieve:</p>
 								<p><strong>To give strong, consistent, and attentive feeling.</strong> It is vital to convey these feeling in order to give clients more reassurance and warmth.</p>
-								<p><strong>To focus more on the new means of communication: digital.</strong> I believe face-to-face or verbal communication should be the best but it may be unrealistic at times. The digital form of communication, especially emails, is now the most preferred method of communication, according to a SendGrind study called <i>The Future of Digital Communication</i>. Under this new Identity, I decided to discard all existing print-based formats such as PDFs, and design new digital formats that can be readily accessible in any devices, especially focusing more on viewing experience on mobile phones. </p>
+								<p><strong>To focus more on the new means of communication: digital.</strong> I believe face-to-face or verbal communication is the best but it may be unrealistic at times. The digital form of communication, especially emails, is now the most preferred method of communication, according to a SendGrind study called <i>The Future of Digital Communication</i>. Under these new Standards, I decided to discard all existing print-based formats such as PDFs, and design new digital formats that can be readily accessible in screen devices, especially emphasizing on viewing experience from mobile phone screens.</p>
 							</article>
 						
 
@@ -57,6 +57,7 @@
 								<h2 class="major">Logo</h2>
 								<span class="image main"><img src="images/logo-precision-guidelines.png" alt="" /></span>
 								<p>The construction and composition of the logo is based on a combination of two geometric shapes: a circle and an equilateral triangle. An integral sign, symbolizing limitless, is inscribed in the lemniscate, symbolizing infinity, which is inscribed in a circle, symbolizing perfection, which is inscribed in an equilateral triangle, symbolizing unity and success. The triangle and its incircle are not parts of the final image but the construction and its white space yield an upward movement and stable formation.</p>
+								<span class="image main"><img src="images/logo-light-dark.png" alt="" /></span>
 								<p>An alternate logo with different color combination with reversed black and white is available to use on dark background only.</p>
 								<span class="image main"><img src="images/logo-minimum-clearance.png" alt="" /></span>
 								<p>The imaginary rectangle that circumscribes the logo is to be surrounded at minimum distance equal to the radius of one of the circles that compose the lemniscate. No visual elements are allowed within this range.</p>
@@ -68,7 +69,7 @@
 								<h2 class="major">Color</h2>
 								<span class="image main"><img src="images/color.png" alt="" /></span>
 								<p>The three primary colors are used: pure white, blue, and pure black. The shade of the blue is chosen to give viewers a sense of trustworthiness and stability. Its Pantone color is estimated. Some other saturated colors may be used only as secondary accent colors.</p>
-								<p>In most types of documents and forms, pure black text on pure white background is to be used. However, when "dark mode" is turned on the device, slightly darker white text (opacity of 87%, 60%, 38% for high emphasis, medium emphasis, disabled, respectively) on dark grey background (HEX #212121) is to be used if possible. Otherwise, all text/background color combinations are to be chosen according to <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html">the Web Content Accessibility Guidlines (WCAG 2.0)</a> level AA, requiring a 4.5:1 color contrast between text and background for normal text, and 3:1 for large text.</p>
+								<p>In most types of documents and forms, pure black text on pure white background is to be used. However, when "dark mode" is turned on the device, slightly darker white text (opacity of 87%, 60%, 38% for high emphasis, medium emphasis, disabled, respectively) on dark grey background (HEX #212121) is to be used if possible. Otherwise, all text/background color combinations are to be chosen according to <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html">the Web Content Accessibility Guidelines (WCAG 2.0)</a> level AA, requiring a 4.5:1 color contrast between text and background for normal text, and 3:1 for large text.</p>
 								<p>*PMS is a registered trademark of Pantone®, Inc. The color shown on this page is not intended to match the Pantone Color Standards. For accurate standards, refer to the current edition of the Pantone Color Specifier Guide.</p>
 							</article>
 
@@ -76,7 +77,7 @@
 							<article id="typography">
 								<h2 class="major">Typography</h2>
 								<span class="image main"><img src="images/typography-sourcesanspro.png" alt="" /></span>
-								<p>The Identity primarily use the Source Sans Pro family in digital publications whenever possible. This is prefered over the Open Sans family due to: a) its clearer distinction between the uppercase "I" and the lowercase "L", b) warmer and more imperfect (therefore more natural) feeling, and c) relatively easier to read in smaller sizes.</p>
+								<p>The Standards primarily use the Source Sans Pro family in digital publications whenever possible. This is prefered over the Open Sans family due to: a) its clearer distinction between the uppercase "I" and the lowercase "L", b) warmer and more imperfect (therefore more natural) feeling, and c) better legibility in smaller sizes.</p>
 								<span class="image main"><img src="images/typography-opensans.png" alt="" /></span>
 								<p>If the Source Sans Pro is not available, the Open Sans family may be used. This family may feel more aesthetically pleasing for its simpler, colder, and emotionless look, such as the straight tail of the uppercase "Q" and decending uppercase "J" below the baseline.</p>
 								<p>Where web fonts are not available such as emails, Arial, the most widely accepted typeface family, may substitute. The typeface families for printed publications are to be determined. Other details of typography other than the typeface such as sizes, kernings, leadings, line spacings, etc, are to be determined.</p>
@@ -85,274 +86,9 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
-								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
-										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-											</div>
-											<div class="field half">
-												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-											</div>
-											<div class="field">
-												<label for="demo-category">Category</label>
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-												<label for="demo-priority-low">Low</label>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-high" name="demo-priority">
-												<label for="demo-priority-high">High</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-copy" name="demo-copy">
-												<label for="demo-copy">Email me a copy</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-human" name="demo-human" checked>
-												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
-												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
+								<p>Should you have any questions or comments regarding the Standards, do not hesitate to contact:<br/>
+								<i class="far fa-envelope"></i>     harryhong.math@gmail.com<br/>
+								<i class="fas fa-phone"></i>     +1 714 872 3978</p>
 							</article>
 
 					</div>
