--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Harry Hong Math Brand Identity</title>
+		<title>Harry Hong Math Identity</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,7 +24,7 @@
 						<div class="content">
 							<div class="inner">
 								<h2>HARRY HONG INSTRUCTOR \MATHEMATICS</h2>
-								<h1>BRAND IDENTITY STANDARDS MANUAL</h1>
+								<h1>IDENTITY STANDARDS MANUAL</h1>
 								<h3>Revision 1.0</h3>
 								<p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
 							</div>
