--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<article id="color">
 								<h2 class="major">Color</h2>
 								<span class="image main"><img src="images/color.png" alt="" /></span>
-								<p>The three primary colors are used: pure white, blue, and pure black. The shade of the blue is chosen to give viewers a sense of trustworthiness and stability. Its Pantone color is estimated. Some other saturated colors may be used only as secondary accent colors.</p>
+								<p>The three colors thar are primarily used in the Standards are pure white, blue, and pure black. The shade of the blue is chosen to give viewers a sense of trustworthiness and stability. Its Pantone color is estimated. The tinted variations of the colors may be used for better legibility. Some other saturated colors may be used only as secondary accent colors.</p>
 								<p>In most types of documents and forms, pure black text on pure white background is to be used. However, when "dark mode" is turned on the device, slightly darker white text (opacity of 87%, 60%, 38% for high emphasis, medium emphasis, disabled, respectively) on dark grey background (HEX #212121) is to be used if possible. Otherwise, all text/background color combinations are to be chosen according to <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/visual-audio-contrast-contrast.html">the Web Content Accessibility Guidelines (WCAG 2.0)</a> level AA, requiring a 4.5:1 color contrast between text and background for normal text, and 3:1 for large text.</p>
 								<p>*PMS is a registered trademark of Pantone®, Inc. The color shown on this page is not intended to match the Pantone Color Standards. For accurate standards, refer to the current edition of the Pantone Color Specifier Guide.</p>
 							</article>
