--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<div class="inner">
 								<h2>HARRY HONG INSTRUCTOR \MATHEMATICS</h2>
 								<h1>IDENTITY STANDARDS MANUAL</h1>
-								<h3>Revision 1.0</h3>
+								<h3>Revision 1.1</h3>
 								<p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
 							</div>
 						</div>
@@ -48,6 +48,7 @@
 								<p>Over the past couple of years, I've come to recognize that the online communication is the nature of the future and started realigning my fundamentals. As I'm assuming responsibility for the protection from this rapidly changing climate, I decided to build the identity from the scratch that'll not only reinforce my existing reputation but also reconstruct my new main target: more communication; this new Identity is both inward- and outward-facing.</p>
 								<p>The new Standards have two main goals to achieve:</p>
 								<p><strong>To give strong, consistent, and attentive feeling.</strong> It is vital to convey these feeling in order to give clients more reassurance and warmth.</p>
+								<span class="image main"><img src="images/phone mockup.png" alt="" /></span>
 								<p><strong>To focus more on the new means of communication: digital.</strong> I believe face-to-face or verbal communication is the best but it may be unrealistic at times. The digital form of communication, especially emails, is now the most preferred method of communication, according to a SendGrind study called <i>The Future of Digital Communication</i>. Under these new Standards, I decided to discard all existing print-based formats such as PDFs, and design new digital formats that can be readily accessible in screen devices, especially emphasizing on viewing experience from mobile phone screens.</p>
 							</article>
 						
@@ -77,10 +78,10 @@
 							<article id="typography">
 								<h2 class="major">Typography</h2>
 								<span class="image main"><img src="images/typography-sourcesanspro.png" alt="" /></span>
-								<p>The Standards primarily use the Source Sans Pro family in digital publications whenever possible. This is prefered over the Open Sans family due to: a) its clearer distinction between the uppercase "I" and the lowercase "L", b) warmer and more imperfect (therefore more natural) feeling, and c) better legibility in smaller sizes.</p>
-								<span class="image main"><img src="images/typography-opensans.png" alt="" /></span>
-								<p>If the Source Sans Pro is not available, the Open Sans family may be used. This family may feel more aesthetically pleasing for its simpler, colder, and emotionless look, such as the straight tail of the uppercase "Q" and decending uppercase "J" below the baseline.</p>
-								<p>Where web fonts are not available such as emails, Arial, the most widely accepted typeface family, may substitute. The typeface families for printed publications are to be determined. Other details of typography other than the typeface such as sizes, kernings, leadings, line spacings, etc, are to be determined.</p>
+								<p>The Standards primarily use the Source Sans Pro family in digital publications whenever possible. It is highly readable and approachable. At large sizes, in bold weight, it commands attention and interest. As body copy, it remains legible and user-friendly. </p>
+								<span class="image main"><img src="images/typography-sizes.png" alt="" /></span>
+								<p>Where it's applicable, paragraph styles are set as above. Other typographic details such as kerning or word spacing, and font sizes in prints are to be determined.</p>
+								<p>Where web fonts are not available such as most email clients, Arial, the most widely accepted typeface family, may substitute.</p>
 							</article>
 
 						<!-- Contact -->
